<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground"
    android:paddingTop="@dimen/medium_125"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_content_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/medium_125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_content_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/medium_125" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        app:endIconDrawable="@drawable/ic_search_outlined"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/gl_content_end"
        app:layout_constraintStart_toStartOf="@id/gl_content_start"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_200"
        app:checkedChip="@id/chip_patient"
        app:layout_constraintEnd_toEndOf="@id/gl_content_end"
        app:layout_constraintStart_toStartOf="@id/gl_content_start"
        app:layout_constraintTop_toBottomOf="@id/til_text"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/patient"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:checkedIcon="@drawable/ic_check_outlined"
            app:checkedIconEnabled="true"
            app:checkedIconTint="?attr/colorOnSecondaryContainer" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_clinic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/clinic"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:checkedIcon="@drawable/ic_check_outlined"
            app:checkedIconEnabled="true"
            app:checkedIconTint="?attr/colorOnSecondaryContainer" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/doctor"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:checkedIcon="@drawable/ic_check_outlined"
            app:checkedIconEnabled="true"
            app:checkedIconTint="?attr/colorOnSecondaryContainer" />

    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/small_50"
        android:layout_marginTop="@dimen/small_200"
        android:background="?attr/colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chips_filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/medium_125"
        android:paddingTop="@dimen/medium_125"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:listitem="@layout/item_order" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing_found"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOutline"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>