<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.component.structure.StructureDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_125"
        android:orientation="vertical"
        android:paddingTop="@dimen/small_200"
        android:paddingBottom="@dimen/medium_125">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="@id/gl_content_end"
            app:layout_constraintStart_toStartOf="@id/gl_content_start"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_symbol"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_200"
            android:hint="@string/symbol"
            app:helperText="@string/single_character_only"
            app:layout_constraintEnd_toEndOf="@id/gl_content_end"
            app:layout_constraintStart_toStartOf="@id/gl_content_start"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_symbol"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/layout_dialog_actions"
            layout="@layout/nested_dialog_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_125"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_content_end"
            app:layout_constraintStart_toStartOf="@id/gl_content_start"
            app:layout_constraintTop_toBottomOf="@id/til_symbol" />

    </LinearLayout>
</ScrollView>